# mule

./: .gitignore  PLAN.md  PROJECT.md  README.md  STATUS.md  index.html  read_docx.py  xince-design-doc.docx  xince-technical-design-final_121644ff.md
server/: .env.example  README.md  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20260313_0001_initial_schema.py  20260313_0002_ai_observability.py  20260314_0003_match_system.py  20260314_0004_p2_capsule_fields.py  20260314_0005_ai_prompt_history.py
server/app/: __init__.py  main.py
server/app/api/: router.py
server/app/config/: ai_prompt_templates.yaml  badges.yaml  daily_questions.yaml  interaction_types.yaml  soul_fragments.yaml
server/app/core/: auth.py  config.py  database.py  security.py  yaml_loader.py
server/app/models/: __init__.py  ai.py  badge.py  base.py  match.py  (+7 more)
server/scripts/: ai_provider_smoke.py  check_runtime.py  run_pytest.sh
server/tests/: conftest.py  test_admin_ai_api.py  test_admin_auth_api.py  test_admin_content_service.py  test_admin_import_api.py  test_ai_services.py  test_app_content_api.py  test_auth_api.py  test_badge_unlock_service.py  test_calendar_activity_service.py  test_calendar_api.py  test_capsule_memory_persona_api.py  test_daily_question_service.py  test_health.py  test_import_service.py  test_import_task_service.py  test_match_api.py  test_match_service.py  test_memory_service.py  test_models_metadata.py  test_score_engine.py  test_sms_and_content_filter.py  test_soul_fragment_service.py  test_yaml_loader.py  test_yaml_sync_service.py
(+197 files in other folders)
